tests/ui/enum.stderr
error: Bbb should sort before Ccc
 --> $DIR/tests/ui/enum.rs:8:5
  |
8 |     Bbb(u8, u8),
  |     ^^^
